--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>File Not Found - 404</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="https://static.vecteezy.com/system/resources/previews/013/764/468/original/question-mark-silhouette-hand-drawn-in-simple-style-illustration-icon-question-symbol-for-print-and-design-quiz-and-exam-concept-isolated-black-element-on-white-background-vector.jpg">
