--- a/index.html
+++ b/index.html
@@ -161,29 +161,29 @@
     <h2 class="poppins h1-light">My Skills</h2>
     <div class="row g-4 py-5 row-cols-3 justify-content-around">
       <a href="scratch.html" class="nice-card">
-        <img src="images/scratch.png" class="img-fluid " alt="...">
+        <img src="images/scratch.png" class="img-fluid max-height" alt="...">
         <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </a>
       <a href="python.html" class="nice-card">
-        <img src="images/python.png" class="img-fluid " alt="...">
+        <img src="images/python.png" class="img-fluid max-height" alt="...">
         <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </a>
       <a href="flutter.html" class="nice-card">
-        <img src="images/flutter.png" class="img-fluid " alt="...">
+        <img src="images/flutter.png" class="img-fluid max-height" alt="...">
         <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est .</p>
       </a>
     </div>
     <div class="row g-4 py-5 row-cols-3 justify-content-around">
       <a href="unity.html" class="nice-card">
-        <img src="images/unity.png" class="img-fluid " alt="...">
+        <img src="images/unity.png" class="img-fluid max-height" alt="...">
         <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </a>
       <a href="gd.html" class="nice-card">
-        <img src="images/gd.png" class="img-fluid " alt="...">
+        <img src="images/gd.png" class="img-fluid max-height" alt="...">
         <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       </a>
       <a href="html.html" class="nice-card">
-        <img src="images/html.png" class="img-fluid " alt="...">
+        <img src="images/html.png" class="img-fluid max-height" alt="...">
         <p class="normal">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est.</p>
       </a>
     </div>
@@ -191,26 +191,6 @@
   <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script src="email.js"></script>
 </section>
-  <!-- <section class="bg-dark-x py-2">
-    <div class="light-bg-dark mb-1">
-      <img src="images/scratch-cat.png" class="flat-img" alt="...">
-    </div>
-    <div class="dark-bg-dark mt-1">
-      <img src="images/scratch-cat.png" class="flat-img" alt="...">
-    </div>
-    <div class="light-bg-dark mb-1">
-      <img src="images/scratch-cat.png" class="flat-img" alt="...">
-    </div>
-    <div class="dark-bg-dark mt-1">
-      <img src="images/scratch-cat.png" class="flat-img" alt="...">
-    </div>
-    <div class="light-bg-dark mb-1">
-      <img src="images/scratch-cat.png" class="flat-img" alt="...">
-    </div>
-    <div class="dark-bg-dark mt-1">
-      <img src="images/scratch-cat.png" class="flat-img" alt="...">
-    </div>
-  </section> -->
   <div class="back-footer bg-dark">
     <div class="container">
       <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
